[package]
workspace = "../../OMNIBUS"
name = "dcse"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bloomfilter = "3.0.1"
bytes = "1.12.1"
crossbeam-channel = "0.5.16"
dashmap = "6.2.1"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
dsce-types = { path = "../../dsce-types" }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
tempfile = "3.10.1"

[[bench]]
name = "engine_benchmark"
harness = false
